@@ -2,6 +2,10 @@ download videos from Yle servers
 Copyright 2009-2017 Antti Ajanki
 Distributed under the GPL v3
 
+xx xxx 2017, Version Next
+
+- New option --duration for limitting the max duration to download
+
 19 Jul 2017, Version 2.20
 
 - Use setuptools for building and installing
